2005-07-21  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_1280.xml: Sync with unstable branch, this
	  printer was only added to the unstable branch.

2005-07-19  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.xml: Removed obsolete link.
	
	* driver/omni.xml: Added entry for IBM's Omni driver. IBM has
	  taken it from the internet and so it is re-hosted on
	  linuxprinting.org now.

2005-07-15  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.xml: Added missing HP printers.

	* printer/HP-LaserJet_1020.xml: Added the HP LaserJet 1020.

2005-07-13  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/GS-HalftoningAlgorithm-Gray.xml: Added option for choosing
	  the halftoning algorithm on BW printers. Much better grayscale
	  quality with Well-Tempered Screening.

2005-07-12  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Updated link to Adobe PPD specification.

	* driver/Postscript.xml: Updated URL.

	* printer/Canon-LBP-460.xml, printer/Canon-LBP-660.xml: These
	  printers are supported by the "lbp660" driver, updated text and
	  rating.

	* driver/lbp660.xml: Added "lbp660" driver.

	* driver/ml85p.xml: Updated URL.

2005-07-11  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-OfficeJet_G55.xml: Added IEEE 1284 information (RH
	  bug #162867).

2005-07-07  Tim Waugh <twaugh@redhat.co m>

	* printer/HP-LaserJet_3020.xml: Corrected IEEE 1284 ID (RH
	  bug #162666).

2005-07-01  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Gestetner-DSc424_PS.xml,
	  printer/Gestetner-DSc428_PS.xml,
	  printer/Gestetner-DSc432_PS.xml,
	  printer/Gestetner-DSc435_PS.xml,
	  printer/Gestetner-DSc445_PS.xml,
	  printer/Gestetner-DSm415_PS.xml,
	  printer/Gestetner-P7527n_PS.xml, printer/Gestetner-P7527_PS.xml,
	  printer/Gestetner-P7535n_PS.xml, printer/Gestetner-P7575_PS.xml,
	  printer/Infotec-IS_2215_PS.xml,
	  printer/Infotec-ISC_1024c_PS.xml,
	  printer/Infotec-ISC_1032c_PS.xml,
	  printer/Infotec-ISC_2428_PS.xml,