@@ -31,6 +31,12 @@
       <description>hp photosmart 7260</description>
       <commandset>MLC,PCL,PML,DW-PCL,DYN,DESKJET</commandset>
     </general>
+    <usb>
+      <manufacturer>hp</manufacturer>
+      <model>photosmart 7200 series</model>
+      <description>7260</description>
+      <commandset>MLC,PCL,PML,DW-PCL,DESKJET,DYN</commandset>
+    </usb>
   </autodetect>
   <functionality>A</functionality>
   <driver>hpijs</driver>
