@@ -1,3 +1,8 @@
+2005-07-25  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-PhotoSmart_7260.xml: Fixed IEEE 1284 ID (USB).
+	Information from RH bug #162915.
+
 2005-07-21  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-DeskJet_1280.xml: Sync with unstable branch, this
